styles/scrollbar.css
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #000;
  outline: 2px solid #000;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: transparent;
  border: 1px solid #fff;
  border: border-box;
  border-radius: 2px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555;
}

::-webkit-scrollbar-thumb:active {
  background: #888;
}

